  -------------- REMINDER PLEASE KEEP ON TOP UNTIL RELEASE----------------
  ! Remember to enable the _free()-function in plugindescr.c (freeAll()) !
  ! as soon as the next release of GnuCash is out (2.0.0)                !
  ------------------------------------------------------------------------

2006/03/22: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- nl_hbci.c: Also print code and text when logging error response


===========================================================================
MARK: released gwenhywfar-2.1.0 (2006/03/20)
===========================================================================


2006/03/20: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added flags to NetLayer_Log which allow to choose what data to log 
  (incoming and/or outgoing data)


2006/03/16: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed a bug in IPC request manager


2006/03/15: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- replaced old GWEN_LIST stuff by new code: These new lists are a drop-in
  replacement for the old lists (source-compatible) and are double-linked.
  In addition to storing the first element these lists now also store a
  pointer to the last element. This makes browsing of the list when adding
  an element unnecessary.
- XML code now uses the new lists instead of its own list code. This leads
  to an astonishing speedup for XML loading:
  Loading times for an XML file with about 16MB of data:
     Gwenhywfar 2.0.0.1: 11 secs
     Gwenhywfar 2.0.0.2: 2-3 secs
  If I can find the time I will also change the GWEN_DB code to use these
  lists instead of its own list code.
- fixed a bug in keyspec.c: Was not initialising list structures


2006-03-03   Christian Stimming <stimming@tuhh.de>

	* src/io/bufferedio.h: Make some simple accessor functions const