@@ -3,6 +3,11 @@
   ! as soon as the next release of GnuCash is out (2.0.0)                !
   ------------------------------------------------------------------------
 
+2006-03-24  Christian Stimming <stimming@tuhh.de>
+
+	* src/base/memory.c, plugins/dbio/olddb/olddb.c: Fix format args
+	for amd64 platform.
+
 2006/03/22: Martin Preuss<martin@libchipcard.de>
 -------------------------------------------------
 - nl_hbci.c: Also print code and text when logging error response
